--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,26 @@
         "name": "Shaykh Farhan"
     },
     "dependencies": {
+        "@hookform/resolvers": "^2.9.10",
+        "@reduxjs/toolkit": "^1.9.2",
+        "axios": "^1.3.0",
+        "lottie-react": "^2.3.1",
+        "moment": "^2.29.4",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-helmet-async": "^1.3.0",
+        "react-hook-form": "^7.43.0",
+        "react-icons": "^4.7.1",
+        "react-redux": "^8.0.5",
+        "react-router-dom": "^6.8.0",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@types/react": "^18.0.24",
         "@types/react-dom": "^18.0.8",
         "@vitejs/plugin-react": "^2.2.0",
         "autoprefixer": "^10.4.13",
+        "daisyui": "^2.49.0",
         "eslint": "^8.2.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.5.0",
