--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
         "react-dom": "^18.2.0",
         "react-helmet-async": "^1.3.0",
         "react-hook-form": "^7.43.0",
+        "react-hot-toast": "^2.4.0",
         "react-icons": "^4.7.1",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.0",
