--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-prettier": "^4.2.1",
+        "nodemon": "^2.0.22",
         "prettier": "^2.8.0"
     }
 }
